Fix spacing on dylexia text

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -57,8 +57,8 @@
 .clearer-text * {
     -webkit-text-stroke: unset !important;
     font-family: 'Comic Sans MS', 'Chalkboard SE', 'Comic Neue', sans-serif !important;
-    letter-spacing: 0.35ch !important;
-    word-spacing: 1.225ch !important; /* 3.5x letter-spacing */
+    letter-spacing: 0.15ch !important;
+    word-spacing: 0.225ch !important; /* 3.5x letter-spacing */
     font-variant-ligatures: none; /* explicitly disable ligatures */
     font-weight: 600; /* demi-bold */
 }
